--- a/assets/end.html
+++ b/assets/end.html
@@ -37,6 +37,17 @@
             Save
           </button>
         </form>
+        <section id="certificate" class="hide">
+          <label id="initials-label">Click to enter your details and download the certificate</label>
+              <button
+            type="submit"
+            class="btn"
+            id="saveScoreBtn"
+            onclick="downloadCertificate(event)"
+          > Download Certificate
+        </button>
+
+        </section>
       </div>
     </div>
     
