--- a/assets/game.html
+++ b/assets/game.html
@@ -30,6 +30,14 @@
                 0
               </h1>
             </div>
+            <div id="hud-item">
+              <p class="hud-timer">
+                Time left
+              </p>
+              <h1 style="color:#FF0000" class="hud-main-text" id="timer">
+                180
+              </h1>
+            </div>
           </div>
         <h3 id="question"> What is the answer to this question </h3>
         <!-- Here were are setting 2 back ground colours in the choice -->
