--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agape Quiz - Chapter 1</title>
     <link rel="stylesheet" href="app.css" />
+    <link rel="icon" type="image/png" href="assets/agapefavicon.ico"/>
+    
 </head>
+
 <!-- <header>
   <div class="scores">
       <a id="highscores-link">View high scores</a>
