Added id to the certificates

--- a/assets/game.html
+++ b/assets/game.html
@@ -8,6 +8,7 @@
     <title>Quick Quiz - Play</title>
     <link rel="stylesheet" href="../app.css" />
     <link rel="stylesheet" href="game.css" />
+    <link rel="icon" type="image/png" href="assets/agapefavicon.ico"/>
   </head>
   <body>
     <div class="container">
