--- a/assets/highscores.html
+++ b/assets/highscores.html
@@ -7,6 +7,7 @@
     <title>Score History</title>
     <link rel="stylesheet" href="../app.css" />
     <link rel="stylesheet" href="highscores.css" />
+    <link rel="icon" type="image/png" href="assets/agapefavicon.ico"/>
   </head>
   <body>
     <div class="container">
