--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <!-- Configure the page in a container -->
     <div class="container">
         <div id="home" class="flex-center flex-column">
-          <h1> Welcome to the agape challenge </h1>
+          <h1> Final quiz </h1>
           <a class="btn" href="assets/game.html">Start Quiz</a>
           <a class="box">
             <p>
-            For each right answer, you get 10 points. You have unlimited attempts. Click 'Start Quiz' when you are ready.
+              For each right answer, you get 10 points. You have unlimited attempts. Click 'Start Quiz' when you are ready.
         </p>
       </a>
           <!-- <a class="btn" href="assets/highscores.html">View high scores</a> -->
