Added how to guide and updated comments

--- a/assets/end.html
+++ b/assets/end.html
@@ -23,6 +23,7 @@
   </div> 
      <div class="container">
       <div id="end" class="flex-center flex-column">
+               <!-- The message displayed and options available vary accoring to the score earned.-->
         <h5 id = "noCert" > Congratulations on completing the quiz!!</h5>
         <h5 id = "yesCert" class="hide">Congratulations on completing the course succefully!!</h5> 
         <h6> Your score is</h6>
