--- a/index.html
+++ b/index.html
@@ -4,27 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agape Quiz - Chapter 1</title>
+    <!-- Title of the quiz -->
+    <title>Agape Quiz</title>
     <link rel="stylesheet" href="app.css" />
+    <!-- Configure the quiz Favicon-->
     <link rel="icon" type="image/png" href="assets/agapefavicon.ico"/>
     
 </head>
 
-<!-- <header>
-  <div class="scores">
-      <a id="highscores-link">View high scores</a>
-      <a class="topbtn" href="assets/highscores.html">View high scores</a>
-  </div>
-</header> -->
 <body>
     <div class="topBanner">
      <div id="topB" class="flex-center">
+      <!-- Configure high score tab on the homepage-->
       <a class="topbtn" href="assets/highscores.html">View high scores</a>
      </div>
    </div> 
     <!-- Configure the page in a container -->
     <div class="container">
         <div id="home" class="flex-center flex-column">
+          <!-- Quiz title -->
           <h1> Final quiz </h1>
           <a class="btn" href="assets/game.html">Start Quiz</a>
           <a class="box">
@@ -32,7 +30,6 @@
               For each right answer, you get 10 points. You have unlimited attempts. Click 'Start Quiz' when you are ready.
         </p>
       </a>
-          <!-- <a class="btn" href="assets/highscores.html">View high scores</a> -->
         </div>
       </div>
 </body>
