--- a/assets/game.html
+++ b/assets/game.html
@@ -8,6 +8,7 @@
     <title>Quick Quiz - Play</title>
     <link rel="stylesheet" href="../app.css" />
     <link rel="stylesheet" href="game.css" />
+       <!-- Configure the quiz Favicon-->
     <link rel="icon" type="image/png" href="assets/agapefavicon.ico"/>
   </head>
   <body>
@@ -35,8 +36,9 @@
               <p class="hud-timer">
                 Time left
               </p>
+                      <!-- Configuring the timer for the quiz -->
               <h1 style="color:#FF0000" class="hud-main-text" id="timer">
-                180
+                300
               </h1>
             </div>
           </div>
@@ -63,6 +65,7 @@
           <h2 id="check-answer" class="correct-wrong hide"></h2>
           <button id="next-btn" class="next-btn hide">Next</button>
           </div> -->
+             <!-- You can modify the response for the right and wrong answers -->
           <h3 id="rightAns">Brilliant, Your answer is right! </h3>
           <h3 id="wrongAns"> Oops!, it was the wrong answer. </h3>
         </div>
@@ -74,50 +77,11 @@
      </div>
      <div class="topBanner">
       <div id="endB" class="flex-horizontal">
+        <!-- Button labels-->
         <a class="topbtn" href="game.html">Restart</a>
         <a class="topbtn" href="../index.html">Home</a>
       </div>
     </div>
     <script src="game.js"></script>
-      <!-- <div id="loader"></div>
-      <div id="game" class="justify-center flex-column hidden">
-        <div id="hud">
-          <div id="hud-item">
-            <p id="progressText" class="hud-prefix">
-              Question
-            </p>
-            <div id="progressBar">
-              <div id="progressBarFull"></div>
-            </div>
-          </div>
-          <div id="hud-item">
-            <p class="hud-prefix">
-              Score
-            </p>
-            <h1 class="hud-main-text" id="score">
-              0
-            </h1>
-          </div>
-        </div>
-        <h2 id="question"></h2>
-        <div class="choice-container">
-          <p class="choice-prefix">A</p>
-          <p class="choice-text" data-number="1"></p>
-        </div>
-        <div class="choice-container">
-          <p class="choice-prefix">B</p>
-          <p class="choice-text" data-number="2"></p>
-        </div>
-        <div class="choice-container">
-          <p class="choice-prefix">C</p>
-          <p class="choice-text" data-number="3"></p>
-        </div>
-        <div class="choice-container">
-          <p class="choice-prefix">D</p>
-          <p class="choice-text" data-number="4"></p>
-        </div>
-      </div>
-    </div>
-    <script src="game.js"></script> -->
   </body>
 </html>
